<resources>
    <string name="app_name">Serendipity</string>

    <string name="franziskaner">Franziskaner</string>
    <string name="lido">Lido</string>
    <string name="museion">Museion</string>
    <string name="obstplatz">Obstplatz</string>
    <string name="salewa">Salewa</string>
    <string name="skatepark">Skatepark</string>
    <string name="location">track Location</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_rules">RulesActivity</string>
    <string name="title_activity_contacts">ContactsActivity</string>
    <string name="title_activity_home_page">HomePageActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_explore">ExploreActivity</string>
    <string name="title_activity_listen">ListenActivity</string>
    <string name="title_activity_cities">CitiesActivity</string>
    <string name="title_activity_upload">UploadActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="button_signIn">Sign In</string>
    <string name="button_register">Register</string>
    <string name="button_upload">Upload</string>
    <string name="button_about">About</string>
    <string name="button_explore">Explore</string>
    <string name="button_listen">Listen</string>
    <string name="button_rules">Rules</string>
    <string name="button_cities">Cities</string>
    <string name="button_contacts">Contacts</string>

    <string name="uploadfromsite">Please <a href="http://sf.inf.unibz.it/serendipity/my_endpoint/users/add/sound">Upload your song from the website</a></string>
    <string name="register">New User <a href="RegisterActivity">Register Here</a></string>
    <string name="contactname">Maria Teresa Scarabello</string>
    <!--<string name="contactinfo"><a href="mailto:MariaTeresa.Scarabello@design-art.unibz.it?subject=InformationRequested&body=Here's more information. http://sf.inf.unibz.it/sf2015/serendipity.html">MariaTeresa.Scarabello@design-art.unibz.it</a></string>-->
    <string name="contactinfo">Contact info</string>
    <string name="rule1">1. REACH YOUR SPOT. Where do you go when angry, to take a stroll and steam off a bit? Where do you daydream when in love or simply serene? Choose your place in the city, the one you find poetic and worth it. Think about how to express the feelings this spot arises inside you and when exactly during the day you like it the most!</string>
    <string name="rule2">2. RECORD ITS SOUND. Take your phone/recorder/zoom and go out to record the ambient sound which will be the basis of your track! Explore the surroundings, daytime, nighttime, be brave! Record the moment you feel right, no matter if a crowd is shouting, or the city is quiet. Pick the best and keeo it, listen to it and get inspiration.</string>
    <string name="rule3">3. ENRICH IT WITH YOUR MUSIC. Grab your craziest friend(otherwise find a brand-new one) and start mixing stuff on a music program to add soul to your basic ambient recording and create your tune! Try to convey your sensation in the track, personalization is the way.</string>
    <string name="rule4">4. SHARE IT ON THE MAP. Congrations you are at the end of the process! After work, fun and exploration, you can finally share your sound with your friend and whoever is going to listen! Now you just have to upload your two sounds in your profile(also the basic sound, remember?) and decide to which place it belongs on the map. After that everyone will have a chance to like it!</string>
    <string name="aboutme">ME AND THE PROJECT. The project began during summer semester 2015, at the Design and Art University of Bolzano. Developed with Zen methodology, thanks to our project leader Andrea Maragno and Prof. Simone Simonelli, this started as a wish of mine to reintroduce poetry in everyone\'s life. It started as something simpler than an application, but it grew towards its right shape</string>
    <string name="aboutgroup">THE GUYS WHO JOINED. In the end, four amazing informatics people decided to join and take the chance and try to work, with a great effort I must say, under the supervision of Davide Taibi. And like that, Florian, Felix, Mercy and Tisho challenged themselves(and myself too) through this adventure! I think we all learned a lot and I am greatly thankful to all</string>

    <string name="no_sound">NO SOUND</string>
    <string name="around">AROUND</string>
    <string name="likes"> LIKE(S)</string>
    <string name="like_it"> LIKE IT</string>
    <string name="share">Share</string>
    
    <string name="facebook_app_id">943613822373545</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="surename">Surname</string>
    <string name="email">E-Mail</string>
    <string name="city">City</string>
    <string name="studies">Profession/Studies</string>

    <string name="action_settings2">Settings</string>
    <string name="select">Select Gender</string>
    <string-array name="gender">
    <item>Male</item>
    <item>Female</item></string-array>

</resources>
