<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"


    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register"
    tools:context="com.unibz.serendipity.SignInActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:fontFamily="Avenir Medium"
        android:textColor="#ffffff"
        android:background="@android:color/black"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/background_top"
            android:adjustViewBounds="true"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:id="@+id/textName"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/surename"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:id="@+id/textSurname"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:id="@+id/textUsername"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp"/>

        <!--<EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:hint="@string/name"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:id="@+id/textGender"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp" />-->
        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:id="@+id/textGender"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:entries="@array/gender"
            android:prompt="@string/select"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:layout_marginTop="5dp"
            android:visibility="visible" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:id="@+id/textEmail"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/city"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:id="@+id/textCity"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/studies"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:id="@+id/textPS"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textColorHint="@android:color/white"
            android:singleLine="true"
            android:inputType="textPassword"
            android:id="@+id/textPass"
            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"
            android:clickable="true"
            android:layout_marginStart="40dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="20dp"
            android:text="@string/button_register"
            android:id="@+id/saveUser"
            android:fontFamily="Avenir Medium"
            android:textColor="#000000"
            android:background="@drawable/button_template_small"
            android:onClick="doReg_click" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/background_bottom"
            android:adjustViewBounds="true"/>

    </LinearLayout>
</ScrollView>