<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_rules" tools:context="com.unibz.serendipity.RulesActivity"
    android:background="@drawable/bgimg">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule1"
        android:textColor="#ffffff"
        android:id="@+id/rule1"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule2"
        android:textColor="#ffffff"
        android:id="@+id/rule2"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/rule1"
        android:layout_alignStart="@+id/rule3" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rule3"
        android:textColor="#ffffff"
        android:id="@+id/rule3"
        android:layout_marginTop="40dp"
        android:layout_below="@+id/rule2" />
</RelativeLayout>
