<?xml version="1.0" encoding="utf-8"?>
<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:showIn="@layout/activity_home_page" tools:context=".HomePage"-->
    <!--android:background="@drawable/bgimg"-->
    <!--android:clickable="true"-->
    <!--android:layout_alignParentBottom="true">-->


    <!--<ScrollView-->
        <!-- -->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/scrollView"-->
        <!--android:layout_alignParentBottom="true"-->
        <!--android:textColor="#ffffff"-->
        <!--android:fontFamily=""-->
        <!--android:gravity="center"-->
        <!--android:layout_centerHorizontal="true">-->

<!--<ScrollView-->
    <!--xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--app:layout_behavior="@string/appbar_scrolling_view_behavior"-->
    <!--tools:showIn="@layout/activity_home_page"-->
    <!--tools:context=".HomePage"-->
    <!--android:background="@drawable/bgimg"-->
    <!--android:clickable="true"-->
    <!--android:layout_alignParentBottom="true"-->
    <!-->-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_home_page"
    tools:context=".HomePage"
    >


        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:fontFamily="Avenir Medium"
            android:textColor="#ffffff"

            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:gravity="center"

            android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    android:background="@drawable/bgimg"
    android:clickable="true"
    android:layout_alignParentBottom="true"

            >
            <Button
                android:layout_marginTop="330dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_signIn"
                android:id="@+id/signInButton"
                android:background="#000000"
                android:textColor="#ffffff"

                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_upload"
                android:id="@+id/uploadButton"
                android:background="#000000"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_about"
                android:id="@+id/aboutButton"
                android:background="#000000"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_explore"
                android:id="@+id/exploreButton"
                android:background="#000000"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_listen"
                android:id="@+id/listenButton"
                android:background="#000000"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_rules"
                android:id="@+id/rulesButton"
                android:background="#000000"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_cities"
                android:id="@+id/citiesButton"
                android:background="#000000"
                android:textColor="#ffffff"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_contacts"
                android:id="@+id/contactsButton"
                android:background="#000000"
                android:textColor="#ffffff"
                />
        </LinearLayout>
    </ScrollView>

<!--</RelativeLayout>-->
<!-- From: file:/home/tihomirski/Tihomir/Didattica/Software_Factory/Workspace/unibz-serendipity/app/src/main/res/layout/content_home_page.xml -->